--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "multer": "^2.0.2",
+        "node-fetch": "^3.3.2",
         "pg": "^8.16.3",
         "sql.js": "^1.8.0"
     },
