--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "multer": "^2.0.2",
+        "natural": "^8.1.0",
         "node-fetch": "^3.3.2",
+        "pdf-parse": "^2.4.5",
         "pg": "^8.16.3",
         "sql.js": "^1.8.0"
     },
