--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "@google/generative-ai": "^0.24.1",
         "axios": "^1.13.3",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
+        "mammoth": "^1.11.0",
         "multer": "^2.0.2",
         "natural": "^8.1.0",
         "node-fetch": "^3.3.2",
