--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,9 @@
         "multer": "^2.0.2",
         "natural": "^8.1.0",
         "node-fetch": "^3.3.2",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
+        "pdf-lib": "^1.17.1",
         "pdf-parse": "^2.4.5",
         "pg": "^8.16.3",
         "sql.js": "^1.8.0"
