--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "license": "MIT",
     "dependencies": {
         "@google/generative-ai": "^0.24.1",
+        "agora-access-token": "^2.0.4",
         "axios": "^1.13.3",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
@@ -28,6 +29,7 @@
         "multer": "^2.0.2",
         "natural": "^8.1.0",
         "node-fetch": "^3.3.2",
+        "nodemailer": "^8.0.1",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "pdf-lib": "^1.17.1",
