--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "agora-rtc-sdk-ng": "^4.24.2",
     "axios": "^1.13.2",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
