--- a/backend/.env
+++ b/backend/.env
@@ -15,3 +15,4 @@ ADZUNA_APP_KEY=1915a7faeb1b33442967a20687556b5a
 
 # Jooble API Credentials
 JOOBLE_API_KEY=22888083-5274-4b98-bde2-539bc6b6fc0f
+GEMINI_API_KEY="AIzaSyDL1zEb7Fpzl8Se-AcoEehr9A3C8U8ySJc"
