--- a/backend/package.json
+++ b/backend/package.json
@@ -21,16 +21,19 @@
         "axios": "^1.13.3",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
+        "dotenv": "^16.6.1",
         "express": "^4.18.2",
+        "express-rate-limit": "^8.2.1",
         "jsonwebtoken": "^9.0.2",
         "mammoth": "^1.11.0",
         "multer": "^2.0.2",
         "natural": "^8.1.0",
         "node-fetch": "^3.3.2",
         "pdf-parse": "^2.4.5",
-        "pg": "^8.16.3",
-        "sql.js": "^1.8.0"
+        "pdfkit": "^0.17.2",
+        "pg": "^8.18.0",
+        "sql.js": "^1.8.0",
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
