feat: Implement Agora-powered video interview functionality with dedicated pages for providers and users.

--- a/backend/.env
+++ b/backend/.env
@@ -16,3 +16,19 @@ ADZUNA_APP_KEY=1915a7faeb1b33442967a20687556b5a
 # Jooble API Credentials
 JOOBLE_API_KEY=22888083-5274-4b98-bde2-539bc6b6fc0f
 GEMINI_API_KEY="AIzaSyDL1zEb7Fpzl8Se-AcoEehr9A3C8U8ySJc"
+
+# Google OAuth Credentials
+GOOGLE_CLIENT_ID=896773923090-k3hop8mu13e3hs46j9fc7i926031374i.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=GOCSPX-mizd9gX-eNVQAeVA2.JOUN8Lwrp2y
+
+# Agora Video Configuration
+AGORA_APP_ID=1fcd8b4f1a8e4acba5b73180672b37a0
+AGORA_APP_CERTIFICATE=0d418e161d764f35b8f82cf4f92ce1fc
+
+# Email Configuration (SMTP)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=mainproject0011@gmail.com
+EMAIL_PASS=your-gmail-app-password
+
