--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,22 @@
-# JWT Secret Key - Change this in production!
+# JWT Secret Key (change in production)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-12345
 
-# JWT Expiration (7 days)
+# JWT Expiration
 JWT_EXPIRES_IN=7d
 
-# Server Port
+# Server Port (NOT database port)
 PORT=3000
 
-# PostgreSQL Database (Supabase Direct Access)
-# Format: postgresql://postgres:[YOUR_PASSWORD]@db.ewjajxkxvncafspwkluq.supabase.co:5432/postgres
-DATABASE_URL=postgresql://postgres:mAin%23876%25%401@db.ewjajxkxvncafspwkluq.supabase.co:5432/postgres
+NEON_DATABASE_URL='postgresql://neondb_owner:npg_GYPF1Q9qkVMH@ep-delicate-brook-ahp3lur6-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require'
+
+# Adzuna API Credentials
+ADZUNA_APP_ID=4fc0c6d5
+ADZUNA_APP_KEY=1915a7faeb1b33442967a20687556b5a
+
+# Jooble API Credentials
+JOOBLE_API_KEY=22888083-5274-4b98-bde2-539bc6b6fc0f
+GEMINI_API_KEY="AIzaSyDL1zEb7Fpzl8Se-AcoEehr9A3C8U8ySJc"
+
+# Google OAuth Credentials
+GOOGLE_CLIENT_ID=896773923090-k3hop8mu13e3hs46j9fc7i926031374i.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=GOCSPX-mizd9gX-eNVQAeVA2.JOUN8Lwrp2y
