feat: Implement comprehensive test management and candidate assessment functionality with new API routes, backend utilities, and a dedicated frontend page.

--- a/backend/.env
+++ b/backend/.env
@@ -30,5 +30,5 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_SECURE=false
 EMAIL_USER=mainproject0011@gmail.com
-EMAIL_PASS=your-gmail-app-password
+EMAIL_PASS=xemh abxz ofuf gdrx
 
