feat: Implement a comprehensive coding test platform including candidate dashboards, recruiter management, code execution, and integrate resume parsing functionality.

--- a/backend/.env
+++ b/backend/.env
@@ -32,3 +32,7 @@ EMAIL_SECURE=false
 EMAIL_USER=mainproject0011@gmail.com
 EMAIL_PASS=xemh abxz ofuf gdrx
 
+# Piston API Configuration (Coding Test Module)
+PISTON_URL=https://emkc.org/api/v2/piston
+MAX_EXECUTION_TIME=5000
+MAX_MEMORY=128000
