--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,18 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-12345
 # JWT Expiration
 JWT_EXPIRES_IN=7d
 
+# Email Configuration (SMTP)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
+
+# Piston API Configuration (Coding Test Module)
+PISTON_URL=https://emkc.org/api/v2/piston
+MAX_EXECUTION_TIME=5000
+MAX_MEMORY=128000
+
 # Server Port (NOT database port)
 PORT=3000
 
