--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
         "natural": "^8.1.0",
         "node-fetch": "^3.3.2",
         "nodemailer": "^8.0.1",
+        "p-limit": "^7.3.0",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "pdf-lib": "^1.17.1",
