--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "start": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
         "install:all": "npm install && npm install --prefix backend && npm install --prefix frontend",
-        "dev": "npm start"
+        "dev": "npm start",
+        "build": "cd frontend && npm install && npm run build"
     },
     "devDependencies": {
         "concurrently": "^8.2.2"
