--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ai-hiring-platform-root",
     "version": "1.0.0",
-    "description": "Root project for AI Powered Agentic Hiring Platform",
+    "description": "Root project for AI Powered Agentic Hiring Platform - Deployment Fix",
     "scripts": {
         "start": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
         "install:all": "npm install && npm install --prefix backend && npm install --prefix frontend",
